# sound-generator

./: .gitignore  ARCHITECTURE.md  GEMINI.md  README.md  TESTING.md  TEST_EVIDENCE.md  metadata.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.gemini/: dashboard.html  gadget-interests.json
.gemini/agents/: gadget-concierge.md
.gemini/mcp-server/: Dockerfile  index.js  package.json  scraper.js
.gemini/scripts/: dashboard_api.js  update_interests.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  check_output.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  window.rs
src-tauri/src/audio/: com.rs  events.rs  icon.rs  mod.rs  policy.rs  policy_v2.rs
src/test/: App.test.tsx  setup.ts
