[package]
name = "antigravity-pulse"
version = "0.1.0"
description = "High-Performance Windows Audio Mixer"
authors = ["Mitsuhide-san"]
edition = "2021"

[lib]
name = "antigravity_pulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
winreg = "0.55.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows-core = "0.58.0"
windows = { version = "0.58", features = [
    "implement",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_WinRT",
    "Win32_Devices_Properties",
    "Win32_UI_Shell_PropertiesSystem"
] }
window-vibrancy = "0.7.1"
image = "0.25.9"
base64 = "0.22.1"
